--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.21",
+        "sass": "^1.58.0",
         "tailwindcss": "^3.2.6",
-        "vite": "^4.0.0",
-        "sass": "^1.58.0"
+        "vite": "^4.0.0"
     },
     "dependencies": {
         "@fancyapps/ui": "^4.0.31",
         "jquery": "^3.6.3",
+        "leaflet": "^1.9.3",
+        "leaflet.markercluster": "^1.5.3",
         "sweetalert2": "^11.7.1",
         "swiper": "^9.0.3"
     }
