--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=deprem_yardim
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=dev_user
+DB_PASSWORD=dev
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
